--- a/public/templates/layouts/master.dust
+++ b/public/templates/layouts/master.dust
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="nm-np">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
     <title>{+title /}</title>
-    <link rel="stylesheet" href="css/app.css" />
+    <link rel="stylesheet" href="css/app.css"/>
 </head>
-<body>
-<div id="wrapper">
+<body class="nm-np">
+<header class="grey">
+    <div class="wrapper">
+        <h1>Kraken Central</h1>
+    </div>
+</header>
+
+<div class="wrapper">
     {+body /}
 </div>
-
+<div id="tentacle"></div>
 </body>
 </html>
