Light customization of admin and profile pages. Master Layour navigation

--- a/public/templates/layouts/master.dust
+++ b/public/templates/layouts/master.dust
@@ -9,6 +9,13 @@
 <header class="grey">
     <div class="wrapper">
         <h1>Kraken Central</h1>
+        <nav>
+            <ul class="nm-np inline">
+                <li><a href="/">Home</a></li>
+                <li><a href="/profile">Profile</a></li>
+                <li><a href="/admin">Admin</a></li>
+            </ul>
+        </nav>
     </div>
 </header>
 
