--- a/public/templates/admin.dust
+++ b/public/templates/admin.dust
@@ -2,4 +2,6 @@
 
 {<body}
     <h1>{@pre type="content" key="greeting"/}</h1>
+    <p>Welcome to the Administrators private club. No users allowed here.</p>
+
 {/body}
