Take advantage of the User info available to the templates

--- a/public/templates/layouts/master.dust
+++ b/public/templates/layouts/master.dust
@@ -14,6 +14,11 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/profile">Profile</a></li>
                 <li><a href="/admin">Admin</a></li>
+                {?user}
+                    <li><a href="/logout">Logout ( {user.name} ) </a></li>
+                {:else}
+                    <li><a href="/login">Log In</a></li>
+                {/user}
             </ul>
         </nav>
     </div>
